--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 300px;
+    width: 40%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.text-xxs {
+    font-size: 9px;
+}
+
+@media only screen and (max-width: 600px) {
+    .card {
+        width: 80%;
+    }
+  }
+  
