--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,10 @@
 /* ./styles/globals.css */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 .card {
     display: flex;
     flex-direction: column;
