--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,14 +10,21 @@
     flex-direction: column;
     flex-wrap: wrap;
     height: 300px;
-    width: 40%;
+    width: 100%;
     text-align: center;
     margin: 0 auto;
-    margin-top: 20px;
+}
+
+.wrapper {
+    width: 80%;
 }
 
 .text-xxs {
     font-size: 9px;
+}
+
+.grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 2fr));
 }
 
 @media only screen and (max-width: 768px) {
