--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,6 +82,13 @@ table tr:last-child td:last-child {
   .hidden {
     display: none;
 }
+
+.error-card {
+    background-color: #ffb6b6;
+    color: #ff0000;
+    height: 3rem;
+    border-radius: 10px;
+}
   
 
 @media only screen and (max-width: 768px) {
